--- a/recipes-application/package.json
+++ b/recipes-application/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/alexhalcazar/StatelessServerApplication.git"
   },
-  "author": "Alex Alcazar",
+  "author": "Alex Alcazar, Hugo Izquierdo, Bryan Gonzalez",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/alexhalcazar/StatelessServerApplication/issues"
