Updated local server port number and README.md file

--- a/recipes-application/config.json
+++ b/recipes-application/config.json
@@ -1,5 +1,5 @@
 {
-    "username": "lovedoctor369",
-    "password": "CS4220",
+    "username": "demo-user",
+    "password": "123",
     "database_name": "RecipeApp"
-    }
+}
